# chrome-dom-diff

./: .gitignore  Cargo.toml  README.md
benches/: arena.rs  dom_capture.rs  memory_growth.rs  pool.rs  websocket_throughput.rs
core/.cargo/: config.toml
core/benches/: diff_perf.rs
core/src/: arena.rs  lib.rs
core/src/monitoring/: counter.rs  threshold.rs
core/tests/: E2E_TEST_SCENARIOS.md  README.md  TEST_REPORT.md  protocol-test.js  test_client.html  test_websocket_server.js  test_websocket_server.py  unit_test_example.rs
core/tests/memory/: leak_test.rs
docs/: PROTOCOL.md  REQUIREMENTS.md
extension/: INSTALL.md  README.md  manifest.json  test-wasm-signatures.js  test-wasm-types.js  test.html
extension/glue/js/: wasm-bridge.js  wasm-bridge.ts  wasm-init.js  (+1 more)
extension/src/: popup.html  popup.js
go-forwarder/: start.sh
go-forwarder/websocket/: server.go
platform-backend/: go.mod
platform-backend/docs/: PROTOCOL.md  TEST_REPORT_TEMPLATE.md
platform-backend/simple-forwarder/: README.md  go.mod  go.sum
platform-backend/tests/: README.md
platform-frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
platform-frontend/src/: App.vue  main.ts
src/: lib_wasm_fix.txt  main.rs  memory.rs  pool.rs  wasm.rs
src/core/: arena.rs  memory.rs  mod.rs  pool.rs  pool.rs.bak
src/diff/: hash.rs  mod.rs  ops_generator.rs  tree_diff.rs
src/dom/: mod.rs
src/monitoring/: gauge.rs  histogram.rs  mod.rs
tests/concurrency/: race_test.rs
tests/performance/: integration.rs
tests/stability/: crash_test.rs
(+95 files in other folders)
